Fix for odd positioning on small displays

--- a/css/extension.css
+++ b/css/extension.css
@@ -4,27 +4,31 @@
 
 
 #extension-power-settings-view {
-  height: 100%; /*calc(100% - 7.6rem);*/
-  box-sizing: border-box;
-  /*overflow: auto;*/
-  position: relative;
-  top: 7.6rem;
-  /*left:0;*/
+	height: 100%;
+	box-sizing: border-box;
+	/* overflow: auto; */
+	/* position: relative; */
+	top: 0rem;
+	/* left: 0; */
+	/* margin-top: 6em; */
+	padding: 2rem;
+	margin-top: 6rem;
+	overflow: auto;
 }
 
 
 #extension-power-settings-content {
 	display:flex;
 	flex-direction: column;
-  align-items: center;
-  justify-content: center;
+	align-items: center;
+	justify-content: center;
 	flex-direction: column;
 	overflow: auto;
-  position: relative;
-  text-align: left;
-  font-size: 1.6rem;
-  color: #fff;
-  margin: 0 auto;
+	position: relative;
+	text-align: left;
+	font-size: 1.6rem;
+	color: #fff;
+	margin: 0 auto;
 	height:100vh; 
 }
 
